Minor spacing fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,7 +31,7 @@ body {
 	width: 320px;
 	height: 100%;
 	border-right: 1px solid white;
-	padding: 50px;
+	padding: 50px 0 0;
 	text-align: center;
 	background-color: #f0f0f0;
 	height: 100%;
